InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractTypeSetting__c/vlocity_ins__ContractTypeSetting__c.object-meta.xml
<CustomObject>
    <description>Specific option settings defined for a contract type that control characteristics and behavior of all contracts of that type.</description>
    <label>Contract Type Setting</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Type Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>