InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractTypeSetting__c/fields/vlocity_ins__SetupValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SetupValue__c</fullName>
    <description>Value setup for the Feature</description>
    <label>Setup Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>